# py-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runtests
.github/workflows/: ci.yml  publish.yml
docs/ai-python/: .gitignore  geistdocs.tsx  package.json  pnpm-lock.yaml  proxy.ts
docs/ai-python/app/: global.css
examples/: check-examples.py  run-examples.py  run-samples.py  run-with-patched-model.py  run_agent.py  run_coding_agent.py  run_custom_loop.py  run_fake_serverless.py  run_hooks.py  run_human_in_the_loop.py  run_mcp.py  run_multiagent.py  run_multiagent_hooks.py  run_new_api.py  run_streaming_tool.py
examples/agents/: custom_loop.py  hooks.py  hooks_serverless.py  nested_agents.py  simple.py
examples/agents-temporal/: activities.py  direct.py  main.py  provider.py  pyproject.toml
examples/agents3/: custom_loop.py  hooks.py  hooks_serverless.py  nested_agents.py  simple.py
examples/coding-agent/: 1_raw_stream.py
examples/fastapi-vite/: .gitignore  README.md  vercel.json
examples/fastapi-vite/backend/: agent.py  main.py  pyproject.toml  storage.py
examples/fastapi-vite/e2e-test/: e2e-test.mjs  package-lock.json  package.json  run.sh
examples/fastapi-vite/frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/models/: buffer.py  direct_adapter.py  explicit_client.py  image_generation.py  inline_image.py  multimodal_input.py  stream.py  structured_output.py  tools.py  video_generation.py
examples/models2/: buffer.py  direct_adapter.py  direct_wire.py  explicit_client.py  image_generation.py  inline_image.py  multimodal_input.py  stream.py  structured_output.py  tools.py  video_generation.py
examples/multiagent-textual/: README.md  client.py  pyproject.toml  server.py  test-e2e.py
examples/run_multiagent_hooks/: client.py  client_tui.py  server.py
examples/samples/: agent.py  agent_custom_loop.py  agent_hooks.py  agent_hooks_inline.py  agent_hooks_serverless.py  agent_nested.py  agent_simple.py  buffer.py  builtin_web_search.py  builtin_web_search_gateway.py  check_connection.py  coding_agent_minimal.py  custom_loop.py  explicit_client.py  gemini.py  hooks.py  image_edit.py  image_gen_dedicated.py  image_gen_inline.py  image_generation.py  inline_image.py  mcp_tools.py  middleware_simple.py  model_params.py  multiagent.py  multimodal.py  multimodal_input.py  openai_chat_completions.py  prompt_caching.py  simple.py  stream.py  stream_all.py  streaming_tool.py  structured_output.py  tools_schema.py  video_gen.py  video_generation.py
examples/samples/media/: image_edit.py  image_gen_dedicated.py  image_gen_inline.py  multimodal.py  video_gen.py
examples/temporal-direct/: _durability_worker.py  main.py  pyproject.toml  test_durability.py
examples/temporal-durable/: .gitignore  README.md  activities.py  direct.py  durable.py  main.py  provider.py  pyproject.toml  tools.py  workflow.py
examples/temporal-durable/raw/: activities.py  main.py  workflow.py
examples/temporal-durable/with_sdk/: activities.py  main.py  workflow.py
examples/temporal-middleware/: main.py  pyproject.toml
skills/ai/: SKILL.md
skills/vercel-ai-sdk/: SKILL.md
skills/vercel-python-services/: SKILL.md
src/ai/: __init__.py  _modelsdev.py  errors.py  middleware.py  util.py
src/ai/adapters/: __init__.py
src/ai/agents/: __init__.py  _middleware.py  agent.py  checkpoint.py  events.py  hooks.py  middleware.py  runtime.py
src/ai/models/: __init__.py
src/ai/providers/: __init__.py  _optional.py  base.py
src/ai/telemetry/: __init__.py  events.py  otel.py
src/ai/types/: __init__.py  builders.py  events.py  integrity.py  media.py  messages.py  metadata.py  proto.py  stream.py  tools.py  usage.py
src/examples/: agent.ipynb  run_agent.py  run_multiagent.py
src/proto_sdk/: __init__.py
src/proto_sdk/core/: __init__.py  runtime-2.py  runtime.py
src/proto_sdk/mcp/: __init__.py  client.py
src/proto_sdk/openai/: __init__.py
src/proto_sdk/ui/: ai_sdk.py
src/py_ai/: __init__.py
src/py_ai/ai_sdk/: __init__.py  ui_adapter.py
src/py_ai/anthropic/: __init__.py
src/py_ai/core/: messages.py  runtime.py  tools.py
src/py_ai/mcp/: client.py
src/py_ai/openai/: __init__.py
src/py_ai/ui/: __init__.py  ai_sdk.py
src/vercel_ai_sdk/: __init__.py  _durability.py
src/vercel_ai_sdk/agent/: __init__.py  agent.py  proto.py  tools.py
src/vercel_ai_sdk/agents/: __init__.py  agent.py  checkpoint.py  context.py  durability.py  hooks.py  runtime.py  streams.py  tools.py
src/vercel_ai_sdk/agents2/: __init__.py  agent.py  checkpoint.py  hooks.py  runtime.py  streams.py  tools.py
src/vercel_ai_sdk/agents3/: __init__.py  agent.py  hooks.py  runtime.py  tools.py
src/vercel_ai_sdk/ai_gateway/: __init__.py  protocol.py
src/vercel_ai_sdk/ai_sdk_ui/: __init__.py  adapter.py  protocol.py  ui_message.py
src/vercel_ai_sdk/anthropic/: __init__.py
src/vercel_ai_sdk/core/: __init__.py  checkpoint.py  decorators.py  hooks.py  image_model.py  llm.py  media_model.py  messages.py  primitives.py  runtime.py  step.py  streams.py  (+3 more)
tests/: conftest.py  test_checkpoint.py  test_middleware.py  test_util.py
tests/agents/: test_aggregate_marker.py  test_checkpoint.py  test_generator_tools.py  test_hooks.py  test_runtime.py  test_streams.py  test_tools.py  test_validation_error_approval.py
tests/agents2/: test_checkpoint.py  test_hooks.py  test_runtime.py  test_streams.py  test_tools.py
tests/ai_gateway/: test_errors.py  test_gateway.py  test_gateway_image.py  test_gateway_video.py  test_protocol.py
tests/ai_sdk_ui/: test_adapter.py
tests/anthropic/: test_anthropic.py
tests/core/: test_checkpoint.py  test_hooks.py  test_llm.py  test_media_model.py  test_messages.py  test_runtime.py  test_streams.py  test_telemetry.py  test_tools.py
tests/mcp/: test_client.py
tests/models/: test_check.py  test_public_api.py  test_resolution.py
tests/openai/: test_openai.py
tests/otel/: test_otel_handler.py
tests/telemetry/: test_otel_handler.py  test_telemetry.py
tests/types/: test_builders.py  test_integrity.py  test_media.py  test_messages.py
(+287 files in other folders)
