[project]
name = "vercel-ai-sdk"
version = "0.0.1.dev4"
description = "The AI Toolkit for Python"
readme = "README.md"
authors = [
    { name = "Andrey Buzin", email = "andrey.buzin@vercel.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.28.1",
    "mcp>=1.18.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "vercel>=0.3.8",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "rich>=14.2.0",
    "mypy>=1.11",
    "ruff>=0.8",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnusedCallResult = false

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
