[project]
name = "multiagent-textual"
version = "0.1.0"
description = "Multi-agent hook resolution demo with Textual TUI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "vercel-ai-sdk",
    "textual>=3.0",
    "websockets>=15.0",
]

[tool.uv.sources]
vercel-ai-sdk = { path = "../..", editable = true }
